<resources>
    <string name="app_name">MyFitnessToday</string>

    <!--  ScreenLogin  -->
    <string name="text_placeholder_email_screenLogin">Digite o seu e-mail</string>
    <string name="text_placeholder_password_screenLogin">Digite a sua senha</string>
    <string name="text_placeholder_forgotPassword_screenLogin">Esqueceu sua senha?</string>
    <string name="text_placeholder_btnLogin_screenLogin">Acessar</string>
    <string name="text_placeholder_btnRegister_screenLogin">Não possui uma conta? Cadastre-se</string>

    <!--  ScreenRegister  -->
    <string name="text_placeholder_fullName_screenRegister">Nome completo</string>
    <string name="text_placeholder_age_screenRegister">Digite sua idade</string>
    <string name="text_placeholder_email_screenRegister">Digite o seu e-mail</string>
    <string name="text_placeholder_createPassword_screenRegister">Crie uma senha</string>
    <string name="text_placeholder_confirmPassword_screenRegister">Confirme sua senha</string>
    <string name="text_placeholder_btnRegister_screenRegister">Cadastrar-se</string>

    <!-- ScreenEditProfile -->
    <string name="text_placeholder_fullName_screenEdit">Nome completo</string>
    <string name="text_placeholder_age_screenEdit">Nome completo</string>
    <string name="text_placeholder_email_screenEdit">Seu E-mail</string>
    <string name="text_placeholder_password_screenEdit">Seu E-mail</string>
    <string name="text_placeholder_confirmPassword_screenEdit">Seu E-mail</string>

    <!-- ScreenImc  -->
    <string name="text_imc_description_ScrenImc">O Índice de Massa Corporal (IMC) é uma medida comum para avaliar o peso saudável em relação à altura. Calcula-se dividindo o peso em quilogramas pelo quadrado da altura em metros.</string>
    <string name="text_placeholder_weight_ScrenImc">Seu peso (kg)</string>
    <string name="text_placeholder_height_ScrenImc">Sua altura (cm)</string>
    <string name="text_btnResult_ScrenImc">Resultado</string>
    <string name="text_btnOverweight_ScrenImc">Sobrepeso</string>
    <string name="text_btnNormalweight_ScrenImc">Peso normal</string>
    <string name="text_btnCalculate_ScrenImc">Calcular</string>

    <!--  TextWarning  -->
    <string name="warning_edit">Por favor, insira somente dados válidos neste campo.</string>
    <string name="warning_imc">Por favor, insira somente números neste campo.</string>

    <!-- Dashboad -->
    <string name="name_user_dashboard">Nome do usuário</string>
    <string name="age_user_dashboard">20 anos</string>
    <string name="imc_name_dashboard_item">IMC</string>

    <!-- resultsImc -->
    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_response">O seu Imc: %1$.2f</string>

</resources>