<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_app"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo_app" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/background_input_white"
        android:hint="@string/text_placeholder_email_screenLogin"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/color_background_text_placeholder" />

    <EditText
        android:id="@+id/edit_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_input_white"
        android:hint="@string/text_placeholder_password_screenLogin"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/color_background_text_placeholder" />

    <Button
        android:id="@+id/btn_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="32dp"
        android:background="@android:color/transparent"
        android:text="@string/text_placeholder_forgotPassword_screenLogin"
        android:textAllCaps="false"
        android:textColor="@color/color_btn_app"
        android:textSize="14dp" />

    <Button
        android:id="@+id/btn_access"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_placeholder_btnLogin_screenLogin"
        android:textColor="@color/color_placeholder_btn_white" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:src="@drawable/item_separator" />

    <Button
        android:id="@+id/btn_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:text="@string/text_placeholder_btnRegister_screenLogin"
        android:textAllCaps="false" />

</LinearLayout>