<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_background_app"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="180dp"
        android:layout_height="180dp"
        android:layout_gravity="center"
        android:layout_marginTop="45dp"
        android:src="@drawable/logo_app" />

    <EditText
        android:id="@+id/edit_full_name"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="45dp"
        android:background="@drawable/background_input_white"
        android:hint="@string/text_placeholder_fullName_screenEdit"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/color_background_text_placeholder" />

    <EditText
        android:id="@+id/edit_age"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_input_white"
        android:hint="@string/text_placeholder_age_screenRegister"
        android:inputType="number"
        android:textAlignment="center"
        android:textColor="@color/color_background_text_placeholder" />

    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_input_white"
        android:hint="@string/text_placeholder_email_screenRegister"
        android:inputType="textEmailAddress"
        android:textAlignment="center"
        android:textColor="@color/color_background_text_placeholder" />

    <EditText
        android:id="@+id/edit_create_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_input_white"
        android:hint="@string/text_placeholder_createPassword_screenRegister"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/color_background_text_placeholder" />

    <EditText
        android:id="@+id/edit_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="25dp"
        android:background="@drawable/background_input_white"
        android:hint="@string/text_placeholder_createPassword_screenRegister"
        android:inputType="textPassword"
        android:textAlignment="center"
        android:textColor="@color/color_background_text_placeholder" />

    <Button
        android:id="@+id/btn_access"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_marginHorizontal="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/text_placeholder_btnRegister_screenRegister"
        android:textAllCaps="false"
        android:textColor="@color/color_placeholder_btn_white" />

</LinearLayout>